# deepx

./: .cursorrules  Agents.md  README.md  all_doc  all_excuter.txt  rename.py
.github/workflows/: excuter-cppcommon.yml  excuter-cuda-linux.yml  excuter-ompsimd-linux.yml  executor-cppcommon.yml  executor-cuda-linux.yml  executor-deepxcore.yml  executor-heapmemcuda.yml  executor-memcuda.yml  executor-ompsimd-linux.yml  executor-op-cuda-linux.yml  executor-op-ompsimd-linux.yml  tool-deepxctl.yml
deepxctl/cmd/tensor/: print.go
deepxctl/tensor/: io.go  print.go  tensor.go
doc/excuter/op-mem-cuda/: list.md
doc/excuter/op-mem-ompsimd/: list.md
docs/: README.md  language.md
docs/deepxIR/: deepxir.md  ir.md
excuter/cpp-common/src/deepx/: shape_changeshape.cpp  shape_changeshape.hpp  tensor.hpp
excuter/cpp-common/src/deepx/tensorfunc/: authors.hpp  changeshape.hpp  elementwise.hpp  io.hpp  matmul.hpp  reduce.hpp  tensorlife.hpp
excuter/cpp-common/src/deepx/tf/: tf.cpp  tf.hpp
excuter/cpp-common/src/stdutil/: fs.cpp
excuter/op-mem-cuda/: CMakeLists.txt
excuter/op-mem-cuda/src/client/: tfs.cpp
excuter/op-mem-cuda/src/deepx/: dtype_cuda.hpp
excuter/op-mem-cuda/src/deepx/tensorfunc/: changeshape_miaobyte.cu  changeshape_miaobyte.cuh  changeshape_miaobyte.hpp  cuda_math.hpp  elementwise_miaobyte_compare.cu  elementwise_miaobyte_compare.cuh  elementwise_miaobyte_compare.hpp  elementwise_miaobyte_sin.cu  elementwise_miaobyte_sin_a.cu  elementwise_miaobyte_sqrt.cu  elementwise_miaobyte_sqrt_a.cu  io_miaobyte.hpp  matmul.cu  matmul_qwang.cu  matmul_qwang.cuh  matmul_qwang.hpp  new.hpp  reduce_miaobyte.cu  tensor_cuda.cuh  tensorlife_miaobyte.hpp
excuter/op-mem-cuda/src/deepx/tf/: changeshape.hpp  elementwise_compare.hpp  init.hpp  io.hpp  tensorlife.hpp
excuter/op-mem-cuda/test/tensorfunc/: 1_cublas_matmul.cpp  CMakeLists.txt
excuter/op-mem-ompsimd/src/client/: tfs.cpp
excuter/op-mem-ompsimd/src/deepx/tensorfunc/: changeshape_miaobyte.hpp  elementwise_miaobyte.hpp  io_miaobyte.hpp  reduce_miaobyte.hpp  tensorlife_miaobyte.hpp
excuter/op-mem-ompsimd/src/deepx/tf/: changeshape.hpp  elementwise.hpp  init.hpp  io.hpp  new.hpp  reduce.hpp
excuter/op-mem-ompsimd/test/tensorfunc/: 2_tensor_new.cpp  2_tensor_range.cpp  3_tensor_print.cpp  4_tensor_matmul.cpp  5_tensor_sum.cpp
executor/cpp-common/: CMakeLists.txt
executor/cpp-common/src/deepx/tf/: tffactory.cpp  tffactory.hpp
executor/deepxcore/: README.md
executor/deepxcore/test/: CMakeLists.txt
executor/heapmem-cuda/: README.md
executor/heapmem-cuda/src/runtime/: lifecycle.cpp
executor/mem-cuda/: CMakeLists.txt  README.md
executor/mem-cuda/src/: CMakeLists.txt
executor/mem-cuda/src/registry/: CMakeLists.txt  redis_client.cpp  redis_client.h
executor/mem-cuda/test/: CMakeLists.txt
executor/mem-cuda/tools/: CMakeLists.txt
executor/op-cuda/: CMakeLists.txt  Dockerfile  build.sh
executor/op-mem-cuda/: CMakeLists.txt  Dockerfile
executor/op-mem-cuda/src/client/: main.cpp
executor/op-mem-cuda/src/deepx/: dtype_cuda.hpp
executor/op-mem-cuda/src/deepx/tensorfunc/: cuda_math.cuh  elementwise_miaobyte_compare.cu
executor/op-mem-mps/: .gitignore  CMakeLists.txt  README.md  build.sh  swift.md  vibe.md
executor/op-mem-mps/src/client/: main.mm
executor/op-mem-mps/src/deepx/: dtype_mps.hpp  mps_context.hpp  mps_context.mm  mps_device.hpp  mps_device.mm
executor/op-mem-mps/src/deepx/tensorfunc/: elementwise_common.hpp  elementwise_miaobyte.hpp  elementwise_miaobyte.metal  init_miaobyte.hpp  mps_common.hpp  tensorlife_miaobyte.hpp
executor/op-mem-mps/test/tensorfunc/: 1_fill.cpp  2_add.cpp  CMakeLists.txt
executor/op-mem-ompsimd/: CMakeLists.txt
executor/op-mem-ompsimd/src/client/: main.cpp
executor/op-ompsimd/: CMakeLists.txt  Dockerfile
executor/op-ompsimd/src/client/: main.cpp
front/py/: .cursorrules
front/py/deepx/autograd/: function.py
front/py/deepx/nn/: __init__.py  deepxir.py
front/py/deepx/nn/functional/: __init__.py  activite.py  authormap.py  changeshape.py  elementwise.py  init.py  io.py  leaffunc.py  leaffunc_changeshape.py  leaffunc_elementwise.py  leaffunc_init.py  leaffunc_io.py  leaffunc_life.py  leaffunc_matmul.py  leaffunc_new.py  leaffunc_reduce.py  matmul.py  new.py  normalization.py  reduce.py  rtf.py  rtf_changeshape.py  rtf_elementwise.py  rtf_init.py  rtf_life.py  rtf_matmul.py  rtf_new.py
front/py/deepx/nn/functional/remotetensorfunc/: __init__.py  changeshape.py  elementwise.py  init.py  io.py  matmul.py  new.py  reduce.py
front/py/deepx/nn/modules/: activation.py  module.py  sparse.py
front/py/deepx/nn/modules/moe/: __init__.py  moe.py
front/py/deepx/nn/modules/transformer/: __init__.py  attention.py  grouped_query_attention.py  scaled_dot_product_attention.py
front/py/deepx/nn/modules/transformer/llama/: modeling_llama.py
front/py/deepx/tensor/: changeshape.py  elementwise.py  io.py  reduce.py  tensor.py
front/py/deepx/transformer/: modeling_rope_utils.py
front/py/deepx/transformer/models/llama/: mlp.py  modeling_llama.py  normalization.py
front/py/deepxutil/numpy/: io.py
front/py/deepxutil/safetensors/: todeepx.py
front/py/examples/1_tensor/: 1_new.py  2_saveload.py
front/py/examples/1_tensor/getitem/: getitem.py  getitem_torch.py
front/py/examples/2_ir/: 1_init_zeroones.py  2_elementwise_add.py  2_elementwise_lessgreater.py  3_matmul.py  4_changeshape_gather.py  5_reduce_sum_keepdim.dot  5_reduce_sum_keepdim.py  5_reduce_sumprod.dot  5_reduce_sumprod.py
front/py/examples/3_functional/: 1_mean.py  1_relu.py  1_rsqrt.py  1_sigmoid.py  1_softmax.py  elementwise_dropout.py
front/py/examples/4_transformer/llama/: llama_attention.py  llama_rope.py  llama_rope_torch.py  token_text.py
scheduler/aispace/: cell.go  go.mod  main.go
scheduler/aispace/funcs/: func.go  tensor.go  var.go  vector.go
scheduler/aispace/space/: redis.go  space.go
tool/deepxctl/: main.go
